[mylaptop:基本可以定这版了，剩下该优化了]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,7 +46,8 @@
         "queue": "cpp",
         "unordered_set": "cpp",
         "map": "cpp",
-        "functional": "cpp"
+        "functional": "cpp",
+        "chrono": "cpp"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
